# airobot

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: RobotWarnings.cmake  arm-none-eabi-gcc.cmake
docs/esp32/: setup.md
docs/hardware/: stlink-flashing.md  wiring-v1.md
docs/superpowers/plans/: 2026-07-14-left-wheel-bringup-plan.md  2026-07-14-login-estop-animated-face-plan.md  2026-07-14-m0-m1-foundation-stm32-plan.md  2026-07-14-mobile-navigation-drawer-plan.md  2026-07-14-openai-stateless-tools-chat-context-plan.md  2026-07-14-responsive-credentials-plan.md  2026-07-14-rotation-only-ec11-plan.md  2026-07-14-single-login-oled-layout-plan.md  2026-07-14-spi-session-recovery-plan.md  2026-07-15-coil-voltage-diagnostic-plan.md  2026-07-15-loaded-motor-voltage-diagnostic-plan.md  2026-07-15-right-wheel-phase-order-diagnostic-plan.md  2026-07-15-w25q-expression-resources-plan.md  2026-07-15-zero-step-wheel-output-plan.md
docs/superpowers/specs/: 2026-07-14-desktop-robot-design.md  2026-07-14-left-wheel-bringup-design.md  2026-07-14-login-estop-animated-face-design.md  2026-07-14-openai-stateless-tools-chat-context-design.md  2026-07-14-single-login-oled-layout-design.md  2026-07-14-spi-session-recovery-design.md  2026-07-15-bounded-http-admission-design.md  2026-07-15-coil-voltage-diagnostic-design.md  2026-07-15-loaded-motor-voltage-diagnostic-design.md  2026-07-15-mobile-http-header-compatibility-design.md  2026-07-15-openai-optional-output-limit-compatibility-design.md  2026-07-15-openai-sse-response-compatibility-design.md  2026-07-15-right-wheel-final-phase-order-design.md  2026-07-15-right-wheel-phase-order-diagnostic-design.md  2026-07-15-w25q-expression-resources-design.md  2026-07-15-web-startup-diagnostics-design.md  2026-07-15-zero-step-wheel-output-design.md
docs/testing/: m0-protocol.md
examples/resources/default_faces/: manifest.json
firmware/: __init__.py
firmware/esp32/: __init__.py  boot.py  main.py
firmware/esp32/core/: __init__.py  compat.py  security.py
firmware/esp32/hardware/: __init__.py  spi_link.py
firmware/esp32/providers/: deepseek_provider.py  openai_provider.py
firmware/esp32/services/: __init__.py  config_service.py  device_service.py  http_client.py  llm_service.py  network_service.py  resource_service.py  web_service.py
firmware/esp32/tools/: __init__.py  robot_tools.py
firmware/esp32/transport/: __init__.py  crc16.py  frame_codec.py  spi_mailbox.py
firmware/stm32/: CMakeLists.txt  STM32F103C8Tx_FLASH.ld
firmware/stm32/App/: app.c  app.h
firmware/stm32/App/Board/: board.c  board.h  board_pins.h
firmware/stm32/App/Core/: robot_state.c  robot_state.h  session_epoch.c  session_epoch.h
firmware/stm32/App/Diagnostics/: coil_diagnostic_service.c  coil_diagnostic_service.h
firmware/stm32/App/Input/: ec11.c  ec11.h  input_policy.c  input_policy.h
firmware/stm32/App/Motion/: motion_service.c  motion_service.h
firmware/stm32/App/Protocol/: controller_session_policy.c  controller_session_policy.h  robot_crc16.c  robot_crc16.h  robot_spi_slot.c  robot_spi_slot.h
firmware/stm32/App/Safety/: safety_supervisor.c  safety_supervisor.h
firmware/stm32/App/Storage/: face_resource_provider.c  face_resource_provider.h  resource_crc32.c  resource_crc32.h  resource_format.c  resource_format.h  resource_policy.c  resource_policy.h  storage_flash.h  storage_service.c  storage_service.h  w25q_storage_adapter.c  w25q_storage_adapter.h
firmware/stm32/App/Ui/: face_animator.c  face_animator.h  status_label.c  status_label.h  ui_service.c  ui_service.h
firmware/stm32/Core/Inc/: main.h  stm32f1xx_hal_conf.h
firmware/stm32/Core/Src/: main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c  syscalls.c
firmware/stm32/Drivers/Display/: soft_i2c.c  soft_i2c.h  ssd1306.c  ssd1306.h
firmware/stm32/Drivers/Motor/: uln2003_hw.c  uln2003_hw.h
firmware/stm32/Drivers/Spi/: spi_mailbox.c  spi_mailbox.h
firmware/stm32/Drivers/Storage/: w25q.c  w25q.h
protocol/: __init__.py  generate.py  messages.json
protocol/golden/: golden_slots.json
tests/: CMakeLists.txt  __init__.py  test_esp_bundle.py  test_esp_services.py  test_llm_services.py  test_protocol_generator.py  test_protocol_python.py  test_resource_pack.py  test_resource_service.py  test_sample_resources.py  test_spi_mailbox.py  test_stm_simulator.py  test_upload_resources.py  test_web_service.py
tests/support/: fake_storage_flash.h  test_harness.h
tests/unit/: test_coil_diagnostic_service.c  test_face_animator.c  test_face_resource_provider.c  test_protocol_c.c  test_resource_format.c  test_resource_policy.c  test_robot_core.c  test_smoke.c  test_status_label.c  test_storage_service.c  test_w25q_addressing.c
tools/: __init__.py  bootstrap_stm32cube.sh  build_esp_bundle.py  check_firmware_isa.py  check_firmware_size.py  deploy_esp32.py  generate_sample_faces.py  protocol_console.py  resource_format.py  resource_pack.py  stm_simulator.py  upload_resources.py
web/: app.js  index.html  styles.css
